flex/flex-tests/testData/flex_highlighting/ImplementsNonPublicInterface/foo/ImplementsNonPublicInterface.mxml
<?xml version="1.0"?>
<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" implements="foo.<error descr="Element is not accessible">INonPublic</error>" >
</mx:Application>
